# mcp-google-analytics

./: .gitignore  README.md  pyproject.toml  server.json
src/google_analytics_mcp/: __init__.py  __main__.py  auth.py  config.py  helpers.py  server.py
src/google_analytics_mcp/tools/: admin.py  data.py
